# dninjalearn

./: mains.py
tasks/: pyproject.toml
tasks/Tasks/: db.sqlite3  manage.py
tasks/Tasks/Tasks/: asgi.py  settings.py  urls.py  wsgi.py
tasks/Tasks/Tasks_home/: apps.py
